src/assets/scss/_projects.scss
// imports
@import "./global";

.project-grid {
  width: 90%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  margin-top: 2rem;
  margin-bottom: 5rem;

  .project {
    position: relative;
    width: 28rem;
    height: auto;
    border: 1px solid $light;

    .project-text {
      width: 30rem;
      height: 4rem;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-between;
      position: absolute;
      top: 0;
      left: 50%;
      transform: translate(-50%, -50%);
      opacity: 0;
      transition: all 0.5s ease-in-out;
      -webkit-transition: all 0.5s ease-in-out;
      -moz-transition: all 0.5s ease-in-out;
      -o-transition: all 0.5s ease-in-out;

      .project-name {
        font-size: 1.6rem;
        font-weight: bold;
      }

      .project-tech {
        color: $lightPurple;
        font-size: 1.4rem;
      }
    }

    &:hover {
      .project-text {
        opacity: 1;
        top: 30%;
      }

      .btn-learn {
        opacity: 1;
        bottom: 10%;
      }

      .grid-box-picturebox {
        opacity: 0;
      }
    }

    .grid-box-picturebox {
      width: 100%;
      height: 100%;
      position: relative;
      overflow: hidden;
      background-size: cover;
      background-repeat: no-repeat;
      opacity: 1;
      transition: opacity 0.5s;
    }
    .grid-box-picture {
      width: 100%;
      height: auto;
      background-color: transparent;
      img {
        width: 100%;
        height: 100%;
      }
    }

    .blend-in {
      animation: fadein 0.5s;
      -moz-animation: fadein 0.5s; /* Firefox */
      -webkit-animation: fadein 0.5s; /* Safari and Chrome */
      -o-animation: fadein 0.5s; /* Opera */
    }

    .btn-learn {
      color: $dark;
      padding: 0.25rem 1rem;
      position: absolute;
      background: transparent;
      cursor: pointer;
      border: 3px solid $green;
      font-size: 1.6rem;
      bottom: 0;
      left: 50%;
      transform: translate(-50%, -50%);
      opacity: 0;
      transition: all 0.5s ease-in-out;
      -webkit-transition: all 0.5s ease-in-out;
      -moz-transition: all 0.5s ease-in-out;
      -o-transition: all 0.5s ease-in-out;

      &:hover {
        color: $light;
        background-color: $green;
      }
    }
  }
}

